--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <!-- hnaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaahnaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaat -->
 
   
-  <title>     Rohrreinigung-Dietrich
+  <title>     Rohrreinigung Dietrich
 
 
 
@@ -60,13 +60,13 @@
               <span>
 
                 
-             022876383632
+             01579-2631599
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Email : infos@GMBH.com
+                Email : Info@rohrreinigung-dietrich.de
               </span>
             </a>
           </div>
@@ -77,7 +77,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
               <span>
-        Rohrreinigung-Dietrich
+        Rohrreinigung Dietrich
 
 
 
@@ -92,7 +92,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Rohr <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"> Datenschutzerklärung - impressum </a>
@@ -115,9 +115,9 @@
         <div class="col-lg-5 col-md-6">
           <div class="detail-box">
             <h2>
-              Datenschutzerklärung            </h2>
+              Impressum            </h2>
             <p>
-                 Rohrreinigung-Dietrich
+                 Rohrreinigung Dietrich
 
 
 
@@ -131,7 +131,7 @@ Martin Dietrich
 
     <br />
 
-        022876383632   <br />
+        01579-2631599   <br />
 
 L524 22, 45657 Recklinghausen
   <br />
@@ -253,7 +253,7 @@ L524 22, 45657 Recklinghausen
               
                   </p>
             <a href="">
-            022876383633      </a>
+            01579-2631599      </a>
           </div>
         </div>
         <div class="col-lg-7 col-md-6">
@@ -318,7 +318,7 @@ L524 22, 45657 Recklinghausen
                       <i class="fa fa-envelope" aria-hidden="true"></i>
                     </div>
                     <p>
-                      Email : gmbh@rohr.de     
+                      Email : Info@rohrreinigung-dietrich.de     
                     </p>
                   </div>
                 </a>
